--- a/global.css
+++ b/global.css
@@ -4,7 +4,23 @@
 
 @layer base {
   .text-edge-outline {
-    -webkit-text-stroke: 1px rgba(255,255,255,0.3);
+    -webkit-text-stroke: 1px rgba(255, 255, 255, 0.3);
   }
-} 
+}
 
+@keyframes glow {
+  0% {
+    color: grey;
+    text-shadow: 0 0 0px rgba(255, 255, 255, 0);
+  }
+
+  100% {
+    color: white;
+    text-shadow: 0 0 24px rgba(255, 255, 255, 1);
+    letter-spacing: 0.3rem;
+  }
+}
+
+.glow {
+  animation: glow 2s forwards;
+}
