--- a/src/layouts/ProjectPost.astro
+++ b/src/layouts/ProjectPost.astro
@@ -1,31 +1,111 @@
 ---
-import type { CollectionEntry } from 'astro:content';
+import type { CollectionEntry } from "astro:content";
+import "@/styles/global.css";
 
-type Props = CollectionEntry<'project'>['data'];
+type Props = CollectionEntry<"project">["data"];
 
 const { title, description, date, repository, url, published } = Astro.props;
 ---
 
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{title}</title>
-</head>
-<body>
-    <article>
-        <header>
-            <h1>{title}</h1>
-            <p><strong>Published on:</strong> {new Date(date).toLocaleDateString()}</p>
+    <head> </head>
+    <body>
+        <header
+            class="relative isolate overflow-hidden bg-gradient-to-tl from-black via-zinc-900 to-black"
+        >
+            <div
+                class="fixed inset-x-0 top-0 z-50 backdrop-blur lg:backdrop-blur-none duration-200 border-b lg:bg-transparent bg-zinc-900/0 border-transparent"
+            >
+                <div
+                    class="container flex flex-row-reverse items-center justify-between p-6 mx-auto"
+                >
+                    <div class="flex justify-between gap-8">
+                        <a
+                            target="_blank"
+                            href="https://github.com/nandan-varma"
+                        >
+                            <svg
+                                class="w-6 h-6 duration-200 hover:font-medium text-zinc-400 hover:text-zinc-100"
+                                xmlns="http://www.w3.org/2000/svg"
+                                fill="none"
+                                viewBox="0 0 24 24"
+                                stroke="currentColor"
+                            >
+                                <path
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    stroke-width="2"
+                                    d="M12 2C6.48 2 2 6.48 2 12c0 4.42 2.87 8.17 6.84 9.49.5.09.68-.22.68-.48 0-.24-.01-.87-.01-1.71-2.78.61-3.37-1.34-3.37-1.34-.45-1.15-1.11-1.46-1.11-1.46-.91-.62.07-.61.07-.61 1.01.07 1.54 1.04 1.54 1.04.9 1.54 2.36 1.1 2.94.84.09-.65.35-1.1.63-1.35-2.22-.25-4.56-1.11-4.56-4.95 0-1.09.39-1.98 1.03-2.68-.1-.25-.45-1.27.1-2.65 0 0 .84-.27 2.75 1.02A9.56 9.56 0 0112 6.8c.85.004 1.71.115 2.51.34 1.91-1.29 2.75-1.02 2.75-1.02.55 1.38.2 2.4.1 2.65.64.7 1.03 1.59 1.03 2.68 0 3.85-2.34 4.7-4.57 4.95.36.31.68.92.68 1.85 0 1.34-.01 2.42-.01 2.75 0 .27.18.58.69.48A10.01 10.01 0 0022 12c0-5.52-4.48-10-10-10z"
+                                ></path>
+                            </svg>
+                        </a>
+                    </div>
+
+                    <a
+                        href="/projects"
+                        class="duration-200 hover:font-medium text-zinc-400 hover:text-zinc-100"
+                    >
+                        <svg
+                            class="w-6 h-6"
+                            xmlns="http://www.w3.org/2000/svg"
+                            fill="none"
+                            viewBox="0 0 24 24"
+                            stroke="currentColor"
+                        >
+                            <path
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                stroke-width="2"
+                                d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+            <div
+                class="container mx-auto relative isolate overflow-hidden py-24 sm:py-32"
+            >
+                <div
+                    class="mx-auto max-w-7xl px-6 lg:px-8 text-center flex flex-col items-center"
+                >
+                    <div class="mx-auto max-w-2xl lg:mx-0">
+                        <h1
+                            class="text-4xl font-bold tracking-tight text-white sm:text-6xl font-display"
+                        >
+                            {title}
+                        </h1>
+                        <p class="mt-6 text-lg leading-8 text-zinc-300">
+                            {description}
+                        </p>
+                    </div>
+
+                    <div class="mx-auto mt-10 max-w-2xl lg:mx-0 lg:max-w-none">
+                        <div
+                            class="grid grid-cols-1 gap-y-6 gap-x-8 text-base font-semibold leading-7 text-white sm:grid-cols-2 md:flex lg:gap-x-10"
+                        >
+                            {
+                                repository && (
+                                    <a
+                                        target="_blank"
+                                        href={`https://github.com/${repository}`}
+                                    >
+                                        GitHub{" "}
+                                        <span aria-hidden="true">&rarr;</span>
+                                    </a>
+                                )
+                            }
+                            {
+                                url && (
+                                    <a target="_blank" href={url}>
+                                        Website{" "}
+                                        <span aria-hidden="true">&rarr;</span>
+                                    </a>
+                                )
+                            }
+                        </div>
+                    </div>
+                </div>
+            </div>
         </header>
-        <section>
-            <p>{description}</p>
-            <p><strong>Repository:</strong> <a href={repository} target="_blank" rel="noopener noreferrer">{repository}</a></p>
-            <p><strong>Live URL:</strong> <a href={url} target="_blank" rel="noopener noreferrer">{url}</a></p>
-        </section>
-        <footer>
-            <p><strong>Status:</strong> {published ? 'Published' : 'Unpublished'}</p>
-        </footer>
-    </article>
-</body>
+        <slot />
+    </body>
 </html>
