--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import BaseHead from "../components/BaseHead.astro";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 
+const navigation = [
+	{ name: "Projects", href: "/projects" },
+	{ name: "Contact", href: "/contact" },
+];
 ---
 
 <!doctype html>
@@ -12,39 +14,54 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body>
-		<Header />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> project starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, project, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included project posts in <code>src/content/project/</code></li>
-				<li>Customize the project post page layout in <code>src/layouts/ProjectPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to
-				<a href="https://docs.astro.build/">read the docs</a>
-				or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a project template with a bit more personality? Check out
-				<a href="https://github.com/Charca/astro-project-template">astro-project-template</a>
-				by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
-		</main>
-		<Footer />
+		<div
+			class="flex flex-col items-center justify-center font-bold w-screen h-screen overflow-hidden bg-gradient-to-tl from-black via-neutral-900 to-black"
+		>
+			<nav class="my-16" aria-label="Main Navigation">
+				<ul class="flex items-center justify-center gap-4">
+					{
+						navigation.map((item) => (
+							<li>
+								<a
+									href={item.href}
+									class="text-lg duration-500 text-zinc-500 hover:text-neutral-900"
+								>
+									{item.name}
+								</a>
+							</li>
+						))
+					}
+				</ul>
+			</nav>
+
+			<h1
+				class="z-10 text-4xl cursor-default font-display sm:text-6xl text-zinc-200 glow"
+			>
+				Nandan Varma
+			</h1>
+
+			<div class="my-16 text-center">
+				<h2 class="text-xl text-zinc-500">Software Developer</h2>
+			</div>
+		</div>
 	</body>
 </html>
+
+<style>
+	@keyframes glow {
+		0% {
+			color: grey;
+			text-shadow: 0 0 0px rgba(255, 255, 255, 0);
+		}
+
+		100% {
+			color: white;
+			text-shadow: 0 0 24px rgba(255, 255, 255, 1);
+			letter-spacing: 0.3rem;
+		}
+	}
+
+	.glow {
+		animation: glow 2s forwards;
+	}
+</style>
