--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,12 @@ const navigation = [
 <html lang="en">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Parkinsans:wght@300..800&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+
 	</head>
-	<body>
+	<body class="parkinsans-font">
 		<div
 			class="flex flex-col items-center justify-center font-bold w-screen h-screen overflow-hidden bg-gradient-to-tl from-black via-neutral-900 to-black"
 		>
@@ -24,7 +28,7 @@ const navigation = [
 							<li>
 								<a
 									href={item.href}
-									class="text-lg duration-500 text-zinc-500 hover:text-neutral-900"
+									class="text-2xl duration-500 text-zinc-500 hover:text-neutral-100"
 								>
 									{item.name}
 								</a>
@@ -34,20 +38,36 @@ const navigation = [
 				</ul>
 			</nav>
 
-			<h1
-				class="z-10 text-4xl cursor-default font-display sm:text-6xl text-zinc-200 glow"
-			>
+			<h1 class="sr-only">
 				Nandan Varma
 			</h1>
 
 			<div class="my-16 text-center">
-				<h2 class="text-xl text-zinc-500">Software Developer</h2>
+				<h2 class="text-2xl text-zinc-500">Software Developer</h2>
 			</div>
 		</div>
 	</body>
 </html>
 
 <style>
+	.lora-font {
+		font-family: "Lora", serif;
+		font-optical-sizing: auto;
+		font-style: normal;
+	}
+
+	.parkinsans-font {
+		font-family: "Parkinsans", sans-serif;
+		font-optical-sizing: auto;
+		font-style: normal;
+	}
+
+	.source-sans-font {
+		font-family: "Source Sans 3", sans-serif;
+		font-optical-sizing: auto;
+		font-style: normal;
+	}
+
 	@keyframes glow {
 		0% {
 			color: grey;
