--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,9 +1,9 @@
 ---
 import { getCollection } from 'astro:content';
-import { Card } from '../../components/Card';
 import { Article } from '../../components/Article';
 import { Navigation } from '../../components/Navigation';
 import "../../styles/global.css";
+import ProjectCard from '@/components/ProjectCard.astro';
 
 const projects = (await getCollection('project')).sort(
 	(a, b) => Date.parse(b.data.date) - Date.parse(a.data.date),
@@ -41,7 +41,7 @@ const sorted = projects.sort((a, b) => {
 			<div class="w-full h-px bg-zinc-800"></div>
 
 			<div class="grid grid-cols-1 gap-8 mx-auto lg:grid-cols-2">
-				<Card client:load>
+				<ProjectCard>
 					<a class="" href={`/projects/${featured?.id}`}>
 						<article class="relative h-full w-full p-4 md:p-8" tabindex={-1}>
 							<div class="flex justify-between gap-2 items-center">
@@ -74,13 +74,13 @@ const sorted = projects.sort((a, b) => {
 							</div>
 						</article>
 					</a>
-				</Card>
+				</ProjectCard>
 
 				<div class="flex flex-col w-full gap-8 mx-auto border-t border-gray-900/10 lg:mx-0 lg:border-t-0">
 					{[top2, top3].filter(project => project !== undefined).map((project) => (
-						<Card>
+						<ProjectCard>
 							<Article id={project.id} project={project.data} views={0} client:load />
-						</Card>
+						</ProjectCard>
 					))}
 				</div>
 			</div>
@@ -91,27 +91,27 @@ const sorted = projects.sort((a, b) => {
 					{sorted
 						.filter((_, i) => i % 3 === 0)
 						.map((project, index) => (
-							<Card>
+							<ProjectCard>
 								<Article id={project.id} project={project.data} views={0} client:load />
-							</Card>
+							</ProjectCard>
 						))}
 				</div>
 				<div class="grid grid-cols-1 gap-4">
 					{sorted
 						.filter((_, i) => i % 3 === 1)
 						.map((project) => (
-							<Card>
+							<ProjectCard>
 								<Article id={project.id} project={project.data} views={0} client:load />
-							</Card>
+							</ProjectCard>
 						))}
 				</div>
 				<div class="grid grid-cols-1 gap-4">
 					{sorted
 						.filter((_, i) => i % 3 === 2)
 						.map((project) => (
-							<Card>
+							<ProjectCard>
 								<Article id={project.id} project={project.data} views={0} client:load />
-							</Card>
+							</ProjectCard>
 						))}
 				</div>
 			</div>
