trying transitions and minor UI tweaks

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -38,7 +38,7 @@
 <div
     data-card
     tabindex={0}
-    class="overflow-hidden relative duration-700 border rounded-xl hover:bg-zinc-800/10 group md:gap-8 hover:border-zinc-400/50 border-zinc-600 focus:outline-none focus:border-blue-500 focus:shadow-outline-blue"
+    class="overflow-hidden relative duration-700 border rounded-xl hover:bg-zinc-800/10 group md:gap-8 hover:border-zinc-400/50 border-zinc-600 focus:outline-none focus:border-blue-500 focus:shadow-outline-blue bg-black/50 backdrop-blur-md hover:backdrop-blur-3xl"
 >
     <div class="pointer-events-none">
         <div
