--- a/src/components/Water.astro
+++ b/src/components/Water.astro
@@ -1,5 +1,5 @@
 <div class="animation-container">
-    <canvas id="waterCanvas"></canvas>
+    <canvas id="waterCanvas" aria-label="Nandan Varma"></canvas>
 </div>
 
 <style>
