--- a/src/layouts/ProjectPost.astro
+++ b/src/layouts/ProjectPost.astro
@@ -4,7 +4,7 @@ import "@/styles/global.css";
 
 type Props = CollectionEntry<"project">["data"];
 
-const { title, description, date, repository, url, published } = Astro.props;
+const { title, description, date, emoji, repository, url, published } = Astro.props;
 ---
 
 <html lang="en">
@@ -30,27 +30,29 @@ const { title, description, date, repository, url, published } = Astro.props;
                         <a
                             target="_blank"
                             href="https://github.com/nandan-varma"
+                            class="white-back duration-200 text-zinc-400 hover:text-zinc-100"
                         >
                             <svg
-                                class="w-6 h-6 duration-200 hover:font-medium text-zinc-400 hover:text-zinc-100"
+                                class="w-8 h-8 duration-200 hover:font-medium text-zinc-400 hover:text-zinc-100"
                                 xmlns="http://www.w3.org/2000/svg"
                                 fill="none"
-                                viewBox="0 0 24 24"
+                                viewBox="0 0 100 100"
                                 stroke="currentColor"
                             >
                                 <path
-                                    stroke-linecap="round"
-                                    stroke-linejoin="round"
-                                    stroke-width="2"
-                                    d="M12 2C6.48 2 2 6.48 2 12c0 4.42 2.87 8.17 6.84 9.49.5.09.68-.22.68-.48 0-.24-.01-.87-.01-1.71-2.78.61-3.37-1.34-3.37-1.34-.45-1.15-1.11-1.46-1.11-1.46-.91-.62.07-.61.07-.61 1.01.07 1.54 1.04 1.54 1.04.9 1.54 2.36 1.1 2.94.84.09-.65.35-1.1.63-1.35-2.22-.25-4.56-1.11-4.56-4.95 0-1.09.39-1.98 1.03-2.68-.1-.25-.45-1.27.1-2.65 0 0 .84-.27 2.75 1.02A9.56 9.56 0 0112 6.8c.85.004 1.71.115 2.51.34 1.91-1.29 2.75-1.02 2.75-1.02.55 1.38.2 2.4.1 2.65.64.7 1.03 1.59 1.03 2.68 0 3.85-2.34 4.7-4.57 4.95.36.31.68.92.68 1.85 0 1.34-.01 2.42-.01 2.75 0 .27.18.58.69.48A10.01 10.01 0 0022 12c0-5.52-4.48-10-10-10z"
-                                ></path>
+                                    fill-rule="evenodd"
+                                    clip-rule="evenodd"
+                                    d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z"
+                                    fill="#24292f"
+                                >
+                                </path>
                             </svg>
                         </a>
                     </div>
 
                     <a
                         href="/projects"
-                        class="duration-200 hover:font-medium text-zinc-400 hover:text-zinc-100"
+                        class="white-back duration-200 hover:font-medium text-white hover:text-zinc-300"
                     >
                         <svg
                             class="w-6 h-6"
@@ -69,31 +71,31 @@ const { title, description, date, repository, url, published } = Astro.props;
                 </div>
             </div>
             <div
-                class="container mx-auto relative isolate overflow-hidden py-24 sm:py-32"
+                class="container mx-auto relative isolate overflow-hidden py-24 sm:py-32 px-4 sm:px-6 lg:px-8"
             >
                 <div
-                    class="mx-auto max-w-7xl px-6 lg:px-8 text-center flex flex-col items-center"
+                    class="mx-auto max-w-7xl text-center flex flex-col items-center"
                 >
-                    <div class="mx-auto max-w-2xl lg:mx-0">
+                    <div class="mx-auto max-w-2xl relative">
                         <h1
-                            class="text-4xl font-bold tracking-tight text-white sm:text-6xl font-display"
+                            class="text-4xl sm:text-6xl font-bold tracking-tight text-white font-display"
+                            transition:name={title}
                         >
                             {title}
                         </h1>
-                        <p class="mt-6 text-lg leading-8 text-zinc-300">
+                        <p class="mt-6 text-base sm:text-lg leading-8 text-zinc-300">
                             {description}
                         </p>
                     </div>
 
-                    <div class="mx-auto mt-10 max-w-2xl lg:mx-0 lg:max-w-none">
-                        <div
-                            class="grid grid-cols-1 gap-y-6 gap-x-8 text-base font-semibold leading-7 text-white sm:grid-cols-2 md:flex lg:gap-x-10"
-                        >
+                    <div class="mx-auto mt-10 max-w-2xl lg:max-w-none">
+                        <div class="grid grid-cols-1 gap-y-6 gap-x-8 text-base font-semibold leading-7 text-white sm:grid-cols-2 md:flex lg:gap-x-10">
                             {
                                 repository && (
                                     <a
                                         target="_blank"
                                         href={`https://github.com/${repository}`}
+                                        class="white-back"
                                     >
                                         GitHub{" "}
                                         <span aria-hidden="true">&rarr;</span>
@@ -102,7 +104,9 @@ const { title, description, date, repository, url, published } = Astro.props;
                             }
                             {
                                 url && (
-                                    <a target="_blank" href={url}>
+                                    <a target="_blank" href={url}
+                                    class="white-back"
+                                    >
                                         Website{" "}
                                         <span aria-hidden="true">&rarr;</span>
                                     </a>
@@ -120,5 +124,8 @@ const { title, description, date, repository, url, published } = Astro.props;
 <style>
     .font-display {
         font-family: "Lora", serif;
+    }
+    .white-back {
+        color: white !important;
     }
 </style>
