--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import { ClientRouter } from "astro:transitions";
 import BaseHead from "../components/BaseHead.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 
@@ -11,6 +12,7 @@ const navigation = [
 <!doctype html>
 <html lang="en">
 	<head>
+		<ClientRouter />
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,6 +30,7 @@ const navigation = [
 							<li>
 								<a
 									href={item.href}
+									transition:name={item.name}
 									class="text-2xl duration-500 text-zinc-500 hover:text-neutral-100"
 								>
 									{item.name}
