--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,9 +1,10 @@
 ---
 import { getCollection } from 'astro:content';
-import { Article } from '../../components/Article';
 import { Navigation } from '../../components/Navigation';
 import "../../styles/global.css";
 import ProjectCard from '@/components/ProjectCard.astro';
+import { ClientRouter } from 'astro:transitions';
+import Article from '@/components/Article.astro';
 
 const projects = (await getCollection('project')).sort(
 	(a, b) => Date.parse(b.data.date) - Date.parse(a.data.date),
@@ -25,6 +26,7 @@ const sorted = projects.sort((a, b) => {
 <!doctype html>
 <html lang="en">
 <head>
+	<ClientRouter />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Projects</title>
@@ -34,7 +36,10 @@ const sorted = projects.sort((a, b) => {
 	<div class="relative pb-16">
 		<div class="px-6 pt-16 mx-auto space-y-8 max-w-7xl lg:px-8 md:space-y-16 md:pt-24 lg:pt-32">
 			<div class="max-w-2xl mx-auto lg:mx-0">
-				<h2 class="text-3xl font-bold tracking-tight text-zinc-100 sm:text-4xl">
+				<h2
+				class="text-3xl font-bold tracking-tight text-zinc-100 sm:text-4xl"
+				transition:name="Projects"
+				>
 					Projects
 				</h2>
 			</div>
@@ -79,7 +84,7 @@ const sorted = projects.sort((a, b) => {
 				<div class="flex flex-col w-full gap-8 mx-auto border-t border-gray-900/10 lg:mx-0 lg:border-t-0">
 					{[top2, top3].filter(project => project !== undefined).map((project) => (
 						<ProjectCard>
-							<Article id={project.id} project={project.data} views={0} client:load />
+							<Article id={project.id} project={project.data} views={0} />
 						</ProjectCard>
 					))}
 				</div>
@@ -92,7 +97,7 @@ const sorted = projects.sort((a, b) => {
 						.filter((_, i) => i % 3 === 0)
 						.map((project, index) => (
 							<ProjectCard>
-								<Article id={project.id} project={project.data} views={0} client:load />
+								<Article id={project.id} project={project.data} views={0} />
 							</ProjectCard>
 						))}
 				</div>
@@ -101,7 +106,7 @@ const sorted = projects.sort((a, b) => {
 						.filter((_, i) => i % 3 === 1)
 						.map((project) => (
 							<ProjectCard>
-								<Article id={project.id} project={project.data} views={0} client:load />
+								<Article id={project.id} project={project.data} views={0} />
 							</ProjectCard>
 						))}
 				</div>
@@ -110,7 +115,7 @@ const sorted = projects.sort((a, b) => {
 						.filter((_, i) => i % 3 === 2)
 						.map((project) => (
 							<ProjectCard>
-								<Article id={project.id} project={project.data} views={0} client:load />
+								<Article id={project.id} project={project.data} views={0} />
 							</ProjectCard>
 						))}
 				</div>
