--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -20,7 +20,7 @@ const { Content } = await render(post);
 ---
 
 <ProjectPost {...post.data}>
-	<article class="w-3xl py-24 mx-auto prose prose-zinc prose-quoteless">
+	<article class="w-3xl py-4 mx-auto prose prose-zinc prose-quoteless max-w-full">
 		<Content class="mdx"/>
 	</article>
 </ProjectPost>
