--- a/src/layouts/ProjectPost.astro
+++ b/src/layouts/ProjectPost.astro
@@ -1,24 +1,29 @@
 ---
 import type { CollectionEntry } from "astro:content";
 import "@/styles/global.css";
+import { ClientRouter } from "astro:transitions";
 
 type Props = CollectionEntry<"project">["data"];
 
-const { title, description, date, emoji, repository, url, published } = Astro.props;
+const { title, description, date, emoji, repository, url, published } =
+    Astro.props;
 ---
 
 <html lang="en">
     <head>
+        <link rel="sitemap" href="/sitemap.xml" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Parkinsans:wght@300..800&display=swap"
             rel="stylesheet"
         />
+        <ClientRouter />
     </head>
     <body>
         <header
-            class="relative isolate overflow-hidden bg-gradient-to-tl from-black via-zinc-900 to-black"
+            class="relative isolate overflow-hidden bg-gradient-to-tl from-black via-zinc-900 to-black rounded-b-md"
         >
             <div
                 class="fixed inset-x-0 top-0 z-50 backdrop-blur lg:backdrop-blur-none duration-200 border-b lg:bg-transparent bg-zinc-900/0 border-transparent"
@@ -53,20 +58,22 @@ const { title, description, date, emoji, repository, url, published } = Astro.pr
                     <a
                         href="/projects"
                         class="white-back duration-200 hover:font-medium text-white hover:text-zinc-300"
+                        transition:name={"nav-back"}
                     >
                         <svg
-                            class="w-6 h-6"
                             xmlns="http://www.w3.org/2000/svg"
-                            fill="none"
+                            width="24"
+                            height="24"
                             viewBox="0 0 24 24"
+                            fill="none"
                             stroke="currentColor"
+                            stroke-width="2"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            class="lucide lucide-arrow-left-icon lucide-arrow-left"
+                            ><path d="m12 19-7-7 7-7"></path><path d="M19 12H5"
+                            ></path></svg
                         >
-                            <path
-                                stroke-linecap="round"
-                                stroke-linejoin="round"
-                                stroke-width="2"
-                                d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
-                        </svg>
                     </a>
                 </div>
             </div>
@@ -79,17 +86,22 @@ const { title, description, date, emoji, repository, url, published } = Astro.pr
                     <div class="mx-auto max-w-2xl relative">
                         <h1
                             class="text-4xl sm:text-6xl font-bold tracking-tight text-white font-display"
-                            transition:name={title}
+                            transition:name={"project-title-" + title}
                         >
                             {title}
                         </h1>
-                        <p class="mt-6 text-base sm:text-lg leading-8 text-zinc-300">
+                        <p
+                            class="mt-6 text-base sm:text-lg leading-8 text-zinc-300"
+                            transition:name={"project-desc-" + title}
+                        >
                             {description}
                         </p>
                     </div>
 
                     <div class="mx-auto mt-10 max-w-2xl lg:max-w-none">
-                        <div class="grid grid-cols-1 gap-y-6 gap-x-8 text-base font-semibold leading-7 text-white sm:grid-cols-2 md:flex lg:gap-x-10">
+                        <div
+                            class="grid grid-cols-1 gap-y-6 gap-x-8 text-base font-semibold leading-7 text-white sm:grid-cols-2 md:flex lg:gap-x-10"
+                        >
                             {
                                 repository && (
                                     <a
@@ -104,8 +116,10 @@ const { title, description, date, emoji, repository, url, published } = Astro.pr
                             }
                             {
                                 url && (
-                                    <a target="_blank" href={url}
-                                    class="white-back"
+                                    <a
+                                        target="_blank"
+                                        href={url}
+                                        class="white-back"
                                     >
                                         Website{" "}
                                         <span aria-hidden="true">&rarr;</span>
@@ -117,7 +131,9 @@ const { title, description, date, emoji, repository, url, published } = Astro.pr
                 </div>
             </div>
         </header>
-        <slot />
+        <div class="container mx-auto px-2 sm:px-4 lg:px-6 max-w-full">
+            <slot />
+        </div>
     </body>
 </html>
 
