--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,73 +1,197 @@
 ---
-import { Card } from "@/components/Card";
-import { Navigation } from "@/components/Navigation";
-
+import Navigation from "@/components/Navigation.astro";
 import BaseHead from "../components/BaseHead.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
-
-import { Mail, Github, Linkedin } from "lucide-react";
-
-const socials = [
-  {
-	icon: Mail,
-	href: "mailto:contact@nandanvarma.com",
-	label: "Email",
-	handle: "contact@nandanvarma.com",
-  },
-  {
-	icon: Github,
-	href: "https://github.com/nandan-varma",
-	label: "Github",
-	handle: "nandan-varma",
-  },
-  {
-	icon: Linkedin,
-	href: "https://www.linkedin.com/in/nandanvarma/",
-	label: "LinkedIn",
-	handle: "nandanvarma",
-  }
-];
+import { ClientRouter } from "astro:transitions";
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+		<ClientRouter />
 	</head>
-    <body class="bg-gradient-to-tl from-black via-neutral-900 to-black">
-        <Navigation client:load/>
-		<div class="container flex items-center justify-center min-h-screen px-4 mx-auto">
-			<div class="grid w-full grid-cols-1 gap-6 mx-auto mt-32 sm:mt-0 sm:grid-cols-3 lg:gap-16">
-				{socials.map((s) => (
-					<Card client:load>
-						<a
-							href={s.href}
-							target="_blank"
-							class="p-4 relative flex flex-col items-center gap-4 duration-700 group md:gap-8 md:py-24  lg:pb-48  md:p-16"
+	<body class="bg-gradient-to-tl from-black via-neutral-900 to-black bg-fixed">
+		<Navigation />
+		<div class="relative pb-16">
+			<div
+				class="px-6 pt-16 mx-auto space-y-8 max-w-7xl lg:px-8 md:space-y-16 md:pt-24 lg:pt-32"
+			>
+				<div class="max-w-2xl mx-auto lg:mx-0">
+					<h2
+						class="text-3xl font-bold tracking-tight text-zinc-100 sm:text-4xl"
+						transition:name={"Contact"}
+					>
+						Contact
+					</h2>
+				</div>
+				<div class="w-full h-px bg-zinc-800">
+					<div
+						class="container flex items-start justify-center min-h-screen mx-auto"
+					>
+						<div
+							class="grid w-full grid-cols-1 gap-6 mx-auto sm:mt-0 sm:grid-cols-3 lg:gap-16"
 						>
-							<span
-								class="absolute w-px h-2/3"
-								aria-hidden="true"
-							/>
-							<span class="relative z-10 flex items-center justify-center w-20 h-20 text-sm duration-1000 border rounded-full text-zinc-200 group-hover:text-white group-hover:bg-zinc-900 border-zinc-500 bg-zinc-900 group-hover:border-zinc-200 drop-shadow-orange">
-								<s.icon size={32} />
-							</span>
-							<div class="z-10 flex flex-col items-center">
-								<span class="text-xl font-medium duration-150 lg:text-xl text-zinc-200 group-hover:text-white font-display">
-									{s.handle}
-								</span>
-								<span class="mt-4 text-sm text-center duration-1000 text-zinc-400 group-hover:text-zinc-200">
-									{s.label}
-								</span>
+							<div
+								class="relative flex items-center justify-center"
+							>
+								<a
+									href="mailto:contact@nandanvarma.com"
+									target="_blank"
+									class="p-4 relative flex flex-col items-center gap-4 duration-700 group md:gap-8 md:py-24 lg:pb-48 md:p-16"
+								>
+									<span
+										class="absolute w-px h-2/3"
+										aria-hidden="true"></span>
+									<span
+										class="relative z-10 flex items-center justify-center w-20 h-20 text-sm duration-1000 border rounded-full text-zinc-200 group-hover:text-white group-hover:bg-zinc-900 border-zinc-500 bg-zinc-900 group-hover:border-zinc-200 drop-shadow-orange"
+									>
+										<svg
+											xmlns="http://www.w3.org/2000/svg"
+											width="24"
+											height="24"
+											viewBox="0 0 24 24"
+											fill="none"
+											stroke="currentColor"
+											stroke-width="2"
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											class="lucide lucide-mail-icon lucide-mail"
+											><rect
+												width="20"
+												height="16"
+												x="2"
+												y="4"
+												rx="2"></rect><path
+												d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"
+											></path></svg
+										>
+									</span>
+									<div
+										class="z-10 flex flex-col items-center"
+									>
+										<span
+											class="text-xl font-medium duration-150 lg:text-xl text-zinc-200 group-hover:text-white font-display"
+										>
+											contact@nandanvarma.com
+										</span>
+										<span
+											class="mt-4 text-sm text-center duration-1000 text-zinc-400 group-hover:text-zinc-200"
+										>
+											Email
+										</span>
+									</div>
+								</a>
 							</div>
-						</a>
-					</Card>
-				))}
+							<div
+								class="relative flex items-center justify-center"
+							>
+								<a
+									href="https://github.com/nandan-varma"
+									target="_blank"
+									class="p-4 relative flex flex-col items-center gap-4 duration-700 group md:gap-8 md:py-24 lg:pb-48 md:p-16"
+								>
+									<span
+										class="absolute w-px h-2/3"
+										aria-hidden="true"></span>
+									<span
+										class="relative z-10 flex items-center justify-center w-20 h-20 text-sm duration-1000 border rounded-full text-zinc-200 group-hover:text-white group-hover:bg-zinc-900 border-zinc-500 bg-zinc-900 group-hover:border-zinc-200 drop-shadow-orange"
+									>
+										<svg
+											xmlns="http://www.w3.org/2000/svg"
+											width="24"
+											height="24"
+											viewBox="0 0 24 24"
+											fill="none"
+											stroke="currentColor"
+											stroke-width="2"
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											class="lucide lucide-github-icon lucide-github"
+											><path
+												d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
+											></path><path
+												d="M9 18c-4.51 2-5-2-7-2"
+											></path></svg
+										>
+									</span>
+									<div
+										class="z-10 flex flex-col items-center"
+									>
+										<span
+											class="text-xl font-medium duration-150 lg:text-xl text-zinc-200 group-hover:text-white font-display"
+										>
+											nandan-varma
+										</span>
+										<span
+											class="mt-4 text-sm text-center duration-1000 text-zinc-400 group-hover:text-zinc-200"
+										>
+											Github
+										</span>
+									</div>
+								</a>
+							</div>
+							<div
+								class="relative flex items-center justify-center"
+							>
+								<a
+									href="https://www.linkedin.com/in/nandanvarma/"
+									target="_blank"
+									class="p-4 relative flex flex-col items-center gap-4 duration-700 group md:gap-8 md:py-24 lg:pb-48 md:p-16"
+								>
+									<span
+										class="absolute w-px h-2/3"
+										aria-hidden="true"></span>
+									<span
+										class="relative z-10 flex items-center justify-center w-20 h-20 text-sm duration-1000 border rounded-full text-zinc-200 group-hover:text-white group-hover:bg-zinc-900 border-zinc-500 bg-zinc-900 group-hover:border-zinc-200 drop-shadow-orange"
+									>
+										<svg
+											xmlns="http://www.w3.org/2000/svg"
+											width="24"
+											height="24"
+											viewBox="0 0 24 24"
+											fill="none"
+											stroke="currentColor"
+											stroke-width="2"
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											class="lucide lucide-linkedin-icon lucide-linkedin"
+											><path
+												d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
+											></path><rect
+												width="4"
+												height="12"
+												x="2"
+												y="9"></rect><circle
+												cx="4"
+												cy="4"
+												r="2"></circle></svg
+										>
+									</span>
+									<div
+										class="z-10 flex flex-col items-center"
+									>
+										<span
+											class="text-xl font-medium duration-150 lg:text-xl text-zinc-200 group-hover:text-white font-display"
+										>
+											nandanvarma
+										</span>
+										<span
+											class="mt-4 text-sm text-center duration-1000 text-zinc-400 group-hover:text-zinc-200"
+										>
+											LinkedIn
+										</span>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
+
+		<style>
+			/* Add any additional styles here */
+		</style>
 	</body>
 </html>
-
-<style>
-/* Add any additional styles here */
-</style>
