--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from 'astro:content';
-import { Navigation } from '../../components/Navigation';
+import Navigation from '../../components/Navigation.astro';
 import "../../styles/global.css";
 import ProjectCard from '@/components/ProjectCard.astro';
 import { ClientRouter } from 'astro:transitions';
@@ -21,6 +21,11 @@ const sorted = projects.sort((a, b) => {
 	return 0;
 });
 
+// remove featured top2 top3 project from sorted list
+if (featured) sorted.splice(sorted.indexOf(featured), 1);
+if (top2) sorted.splice(sorted.indexOf(top2), 1);
+if (top3) sorted.splice(sorted.indexOf(top3), 1);
+
 ---
 
 <!doctype html>
@@ -32,13 +37,13 @@ const sorted = projects.sort((a, b) => {
 	<title>Projects</title>
 </head>
 <body class="bg-gradient-to-tl from-black via-neutral-900 to-black">
-	<Navigation client:load />
+	<Navigation />
 	<div class="relative pb-16">
 		<div class="px-6 pt-16 mx-auto space-y-8 max-w-7xl lg:px-8 md:space-y-16 md:pt-24 lg:pt-32">
 			<div class="max-w-2xl mx-auto lg:mx-0">
 				<h2
 				class="text-3xl font-bold tracking-tight text-zinc-100 sm:text-4xl"
-				transition:name="Projects"
+				transition:name={"Projects"}
 				>
 					Projects
 				</h2>
@@ -66,10 +71,13 @@ const sorted = projects.sort((a, b) => {
 							<h2
 								id="featured?-post"
 								class="mt-4 text-3xl font-bold text-zinc-100 group-hover:text-white sm:text-4xl font-display"
+								transition:name={"project-title-"+featured?.data.title}
 							>
 								{featured?.data.title}
 							</h2>
-							<p class="mt-4 leading-8 duration-150 text-zinc-400 group-hover:text-zinc-300">
+							<p class="mt-4 leading-8 duration-150 text-zinc-400 group-hover:text-zinc-300"
+							transition:name={"project-desc-"+featured?.data.title}
+							>
 								{featured?.data.description}
 							</p>
 							<div class="absolute bottom-4 md:bottom-8">
@@ -95,8 +103,8 @@ const sorted = projects.sort((a, b) => {
 				<div class="grid grid-cols-1 gap-4">
 					{sorted
 						.filter((_, i) => i % 3 === 0)
-						.map((project, index) => (
-							<ProjectCard>
+						.map((project) => (
+							<ProjectCard key={project.id}>
 								<Article id={project.id} project={project.data} views={0} />
 							</ProjectCard>
 						))}
@@ -105,7 +113,7 @@ const sorted = projects.sort((a, b) => {
 					{sorted
 						.filter((_, i) => i % 3 === 1)
 						.map((project) => (
-							<ProjectCard>
+							<ProjectCard key={project.id}>
 								<Article id={project.id} project={project.data} views={0} />
 							</ProjectCard>
 						))}
@@ -114,7 +122,7 @@ const sorted = projects.sort((a, b) => {
 					{sorted
 						.filter((_, i) => i % 3 === 2)
 						.map((project) => (
-							<ProjectCard>
+							<ProjectCard key={project.id}>
 								<Article id={project.id} project={project.data} views={0} />
 							</ProjectCard>
 						))}
