--- a/src/styles/mdx.css
+++ b/src/styles/mdx.css
@@ -1,67 +1,86 @@
 .mdx {
     display: block;
+    max-width: 100%;
 }
 
 h1 {
     margin-top: 0.5rem;
     scroll-margin-top: 5rem;
-    font-size: 2.25rem; /* equivalent to text-4xl */
-    font-weight: 700; /* equivalent to font-bold */
+    font-size: 2.25rem;
+    /* equivalent to text-4xl */
+    font-weight: 700;
+    /* equivalent to font-bold */
     letter-spacing: -0.05em;
 }
 
 h2 {
     margin-top: 2.5rem;
     scroll-margin-top: 5rem;
-    border-bottom: 2px solid #374151; /* equivalent to border-b-zinc-800 */
+    border-bottom: 2px solid #374151;
+    /* equivalent to border-b-zinc-800 */
     padding-bottom: 0.25rem;
-    font-size: 1.875rem; /* equivalent to text-3xl */
-    font-weight: 600; /* equivalent to font-semibold */
+    font-size: 1.875rem;
+    /* equivalent to text-3xl */
+    font-weight: 600;
+    /* equivalent to font-semibold */
     letter-spacing: -0.05em;
 }
 
 h3 {
     margin-top: 2rem;
     scroll-margin-top: 5rem;
-    font-size: 1.5rem; /* equivalent to text-2xl */
-    font-weight: 600; /* equivalent to font-semibold */
+    font-size: 1.5rem;
+    /* equivalent to text-2xl */
+    font-weight: 600;
+    /* equivalent to font-semibold */
     letter-spacing: -0.05em;
 }
 
 h4 {
     margin-top: 2rem;
     scroll-margin-top: 5rem;
-    font-size: 1.25rem; /* equivalent to text-xl */
-    font-weight: 600; /* equivalent to font-semibold */
+    font-size: 1.25rem;
+    /* equivalent to text-xl */
+    font-weight: 600;
+    /* equivalent to font-semibold */
     letter-spacing: -0.05em;
 }
 
 h5 {
     margin-top: 2rem;
     scroll-margin-top: 5rem;
-    font-size: 1.125rem; /* equivalent to text-lg */
-    font-weight: 600; /* equivalent to font-semibold */
+    font-size: 1.125rem;
+    /* equivalent to text-lg */
+    font-weight: 600;
+    /* equivalent to font-semibold */
     letter-spacing: -0.05em;
 }
 
 h6 {
     margin-top: 2rem;
     scroll-margin-top: 5rem;
-    font-size: 1rem; /* equivalent to text-base */
-    font-weight: 600; /* equivalent to font-semibold */
+    font-size: 1rem;
+    /* equivalent to text-base */
+    font-weight: 600;
+    /* equivalent to font-semibold */
     letter-spacing: -0.05em;
 }
 
 a {
-    font-weight: 500; /* equivalent to font-medium */
-    color: #111827; /* equivalent to text-zinc-900 */
+    font-weight: 500;
+    /* equivalent to font-medium */
+    color: #111827;
+    /* equivalent to text-zinc-900 */
     text-decoration: underline;
-    text-underline-offset: 0.25rem; /* equivalent to underline-offset-4 */
+    text-underline-offset: 0.25rem;
+    /* equivalent to underline-offset-4 */
 }
 
 p {
-    line-height: 1.75; /* equivalent to leading-7 */
-    margin-top: 1.5rem; /* for all paragraphs except the first */
+    line-height: 1.75;
+    /* equivalent to leading-7 */
+    margin-top: 1.5rem;
+    /* for all paragraphs except the first */
 }
 
 ul,
@@ -84,21 +103,26 @@ li {
 
 blockquote {
     margin-top: 1.5rem;
-    border-left: 4px solid #d1d5db; /* equivalent to border-l-2 border-zinc-300 */
+    border-left: 4px solid #d1d5db;
+    /* equivalent to border-l-2 border-zinc-300 */
     padding-left: 1.5rem;
     font-style: italic;
-    color: #374151; /* equivalent to text-zinc-800 */
+    color: #374151;
+    /* equivalent to text-zinc-800 */
 }
 
 img {
-    border-radius: 0.375rem; /* equivalent to rounded-md */
-    border: 1px solid #e5e7eb; /* equivalent to border-zinc-200 */
+    border-radius: 0.375rem;
+    /* equivalent to rounded-md */
+    border: 1px solid #e5e7eb;
+    /* equivalent to border-zinc-200 */
 }
 
 hr {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    border: 1px solid #e5e7eb; /* equivalent to border-zinc-200 */
+    border: 1px solid #e5e7eb;
+    /* equivalent to border-zinc-200 */
 }
 
 table {
@@ -110,19 +134,22 @@ table {
 
 tr {
     margin: 0;
-    border-top: 1px solid #e5e7eb; /* equivalent to border-t border-zinc-300 */
+    border-top: 1px solid #e5e7eb;
+    /* equivalent to border-t border-zinc-300 */
     padding: 0;
 }
 
 th,
 td {
-    border: 1px solid #e5e7eb; /* equivalent to border-zinc-200 */
+    border: 1px solid #e5e7eb;
+    /* equivalent to border-zinc-200 */
     padding: 0.5rem 1rem;
     text-align: left;
 }
 
 th {
-    font-weight: 700; /* equivalent to font-bold */
+    font-weight: 700;
+    /* equivalent to font-bold */
 }
 
 td {
@@ -145,21 +172,23 @@ pre {
     margin-bottom: 1rem;
     overflow-x: auto;
     border-radius: 0.5rem;
-    background-color: #1f2937; /* equivalent to bg-zinc-900 */
+    background-color: #1f2937;
+    /* equivalent to bg-zinc-900 */
     padding: 1rem;
 }
 
 code {
     position: relative;
     border-radius: 0.25rem;
-    background-color: rgba(
-        55,
-        65,
-        81,
-        0.25
-    ); /* equivalent to bg-zinc-300 bg-opacity-25 */
+    background-color: rgba(55,
+            65,
+            81,
+            0.25);
+    /* equivalent to bg-zinc-300 bg-opacity-25 */
     padding: 0.2rem 0.3rem;
     font-family: monospace;
-    font-size: 0.875rem; /* equivalent to text-sm */
-    color: #4b5563; /* equivalent to text-zinc-600 */
+    font-size: 0.875rem;
+    /* equivalent to text-sm */
+    color: #4b5563;
+    /* equivalent to text-zinc-600 */
 }
