--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,3 +30,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 		</div>
 	</body>
 </html>
+
+<style>
+	body{
+		background-color: black;
+	}
+</style>
