basic blog system

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,6 +23,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 				transition:name={"Projects"}>Projects</a
 			>
 			<a
+				href="/blog"
+				class="duration-500 text-zinc-500 hover:text-neutral-100"
+				transition:name={"Blog"}>Blog</a
+			>
+			<a
 				href="/contact"
 				class="duration-500 text-zinc-500 hover:text-neutral-100"
 				transition:name={"Contact"}>Contact</a
