blog and bug fix

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -27,7 +27,7 @@ const { Content } = await render(post);
 	<body>
 		<BlogPost {...post.data}>
 			<article
-				class="w-3xl py-4 mx-auto prose prose-zinc prose-quoteless max-w-full"
+				class="w-full md:w-3xl py-4 mx-auto prose prose-zinc prose-quoteless max-w-full px-4 sm:px-6"
 			>
 				<Content class="mdx" />
 			</article>
