--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 		</div>
 		<div
 			id="content"
-			class="flex-1 flex justify-center items-end pb-40 gap-4 md:gap-12 text-3xl font-bold z-20"
+			class="flex-1 flex justify-center items-end pb-40 gap-4 md:gap-12 text-2xl md:text-3xl font-bold z-20"
 		>
 			<a
 				href="/projects"
