trying out sentry

--- a/src/pages/old.astro
+++ b/src/pages/old.astro
@@ -1,82 +1,10 @@
+<!-- your-page.astro -->
 ---
-import BaseHead from "../components/BaseHead.astro";
-import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
-
-const navigation = [
-	{ name: "Projects", href: "/projects" },
-	{ name: "Contact", href: "/contact" },
-];
 ---
-
-<!doctype html>
-<html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body class="parkinsans-font">
-		<div
-			class="flex flex-col items-center justify-center font-bold w-screen h-screen overflow-hidden bg-gradient-to-tl from-black via-neutral-900 to-black"
-		>
-			<nav class="my-16" aria-label="Main Navigation">
-				<ul class="flex items-center justify-center gap-4">
-					{
-						navigation.map((item) => (
-							<li>
-								<a
-									href={item.href}
-									transition:name={item.name}
-									class="text-2xl duration-500 text-zinc-500 hover:text-neutral-100"
-								>
-									{item.name}
-								</a>
-							</li>
-						))
-					}
-				</ul>
-			</nav>
-
-			<h1 class="text-6xl text-center glow">Nandan Varma</h1>
-
-			<div class="my-16 text-center">
-				<h2 class="text-2xl text-zinc-500">Software Developer</h2>
-			</div>
-		</div>
-	</body>
-</html>
-
-<style>
-	.lora-font {
-		font-family: "Lora", serif;
-		font-optical-sizing: auto;
-		font-style: normal;
-	}
-
-	.parkinsans-font {
-		font-family: "Parkinsans", sans-serif;
-		font-optical-sizing: auto;
-		font-style: normal;
-	}
-
-	.source-sans-font {
-		font-family: "Source Sans 3", sans-serif;
-		font-optical-sizing: auto;
-		font-style: normal;
-	}
-
-	@keyframes glow {
-		0% {
-			color: grey;
-			text-shadow: 0 0 0px rgba(255, 255, 255, 0);
-		}
-
-		100% {
-			color: white;
-			text-shadow: 0 0 24px rgba(255, 255, 255, 1);
-			letter-spacing: 0.3rem;
-		}
-	}
-
-	.glow {
-		animation: glow 2s forwards;
-	}
-</style>
+<button id="error-button">Throw test error</button>
+<script>
+  function handleClick () {
+    throw new Error('This is a test error');
+  }
+  document.querySelector("#error-button").addEventListener("click", handleClick);
+</script>
