--- a/src/layouts/ProjectPost.astro
+++ b/src/layouts/ProjectPost.astro
@@ -70,13 +70,13 @@ const { title, description, date, emoji, repository, url, published } =
             <div class="mx-auto max-w-2xl relative">
                 <h1
                     class="text-4xl sm:text-6xl font-bold tracking-tight text-white font-display"
-                    transition:name={"blog-title-" + title}
+                    transition:name={"project-title-" + title}
                 >
                     {title}
                 </h1>
                 <p
                     class="mt-6 text-base sm:text-lg leading-8 text-zinc-300"
-                    transition:name={"blog-desc-" + title}
+                    transition:name={"project-desc-" + title}
                 >
                     {description}
                 </p>
