--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,7 +8,7 @@ import BaseHead from "@/components/BaseHead.astro";
 
 const blogs = (await getCollection("blog"))
 	.sort((a, b) => Date.parse(b.data.date) - Date.parse(a.data.date))
-	.filter((post)=>!post.data.draft)
+	.filter((post) => !post.data.draft)
 	.map((post) => post);
 
 const sorted = blogs.sort((a, b) => {
@@ -24,13 +24,11 @@ const sorted = blogs.sort((a, b) => {
 <!doctype html>
 <html lang="en">
 	<head>
-		<BaseHead 
-		title={"Blog"} 
-		description={"Blog"}
-		image="/og/blog.png"
-		/>
+		<BaseHead title={"Blog"} description={"Blog"} image="/og/blog.png" />
 	</head>
-	<body class="bg-gradient-to-tl from-black via-neutral-900 to-black h-screen">
+	<body
+		class="bg-gradient-to-tl from-black via-neutral-900 to-black h-screen"
+	>
 		<Navigation />
 		<div class="relative pb-16">
 			<div
