draft and contact update

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -40,7 +40,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 								class="relative flex items-center justify-center"
 							>
 								<a
-									href="mailto:contact@nandanvarma.com"
+									href="mailto:contact@nandan.fyi"
 									target="_blank"
 									class="p-4 relative flex flex-col items-center gap-4 duration-700 group md:gap-8 md:py-24 lg:pb-48 md:p-16"
 								>
@@ -77,7 +77,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 										<span
 											class="text-xl font-medium duration-150 lg:text-xl text-zinc-200 group-hover:text-white font-display"
 										>
-											contact@nandanvarma.com
+											contact@nandan.fyi
 										</span>
 										<span
 											class="mt-4 text-sm text-center duration-1000 text-zinc-400 group-hover:text-zinc-200"
