chore : bump deps. and bug fixes

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -65,7 +65,8 @@ const { title, description, image = "/og.png" } = Astro.props;
 <!-- analytics -->
 <script
 	is:inline
-	defer
+	async
+	fetchpriority="low"
 	data-domain="nandanvarma.com"
 	src="https://plausible.nandanvarma.com/js/script.outbound-links.tagged-events.js"
 ></script>
