--- a/src/components/Article.astro
+++ b/src/components/Article.astro
@@ -4,10 +4,9 @@ import type { Project } from "../content.config";
 interface Props {
   id: string;
   project: Project;
-  views: number;
 }
 
-const { id, project, views } = Astro.props;
+const { id, project } = Astro.props;
 ---
 
 
