--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -4,10 +4,9 @@ import type { Blog } from "../content.config";
 interface Props {
   id: string;
   blog: Blog;
-  views: number;
 }
 
-const { id, blog, views } = Astro.props;
+const { id, blog } = Astro.props;
 ---
 
 
