--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -31,7 +31,7 @@
     // Add event listener to the card element
     const cardElement = document.querySelector("[data-card]");
     if (cardElement !== null) {
-        cardElement.addEventListener("mousemove", onMouseMove as EventListener);
+        cardElement.addEventListener("mousemove", onMouseMove);
     }
 </script>
 
