--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,7 +4,7 @@ import "@/styles/global.css";
 
 type Props = CollectionEntry<"blog">["data"];
 
-const { title, description, date, draft } = Astro.props;
+const { title, description, draft } = Astro.props;
 ---
 
 <header
