feat. : change analytics provider

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -63,4 +63,8 @@ const { title, description, image = "/og.png" } = Astro.props;
 <ClientRouter />
 
 <!-- analytics -->
-<script defer src="https://analytics.nandan.fyi/script.js" data-website-id="c8c3074c-cce2-4ac2-8755-a86a369cc4d2"></script>
+<script
+    src="https://analytics.nandanvarma.com/api/script.js"
+    data-site-id="1"
+    defer
+></script>
